--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,22 +1,57 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: null }
+        my_provider:
+            entity:
+                #Chemin vers l entite
+                class: App\Entity\Participant
+                #Propriete utilisee pour l authentification
+                property: mail
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            pattern: ^/
+            provider: my_provider
             anonymous: true
+            #Route pour le login et la validation du login
+            form_login:
+                login_path: login
+                check_path: login
 
+            #En cas de changement d utilisateur on logout l ancien
+            logout_on_user_change: true
+
+            #Route pour le logout
+            logout:
+                path: logout
+                target: main_home
+
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
             # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            # http_basic: true
+            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
+
+            # form_login: true
+            # https://symfony.com/doc/current/security/form_login_setup.html
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+       # - { path: ^/category, roles: ROLE_ADMIN }
+       # - { path: ^/ideas/add, roles: ROLE_USER }
+       # - { path: ^/ideas/del, roles: ROLE_USER }
+
+    #hierarchy des roles: ici ROLE_ADMIN a aussi les droits de ROLE_USER
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+
+    #Encodage pour le mot de passe
+    encoders:
+        App\Entity\Participant:
+            algorithm: argon2i
