--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -51,8 +51,8 @@ security:
         #- { path: ^/ideas/del, roles: ROLE_USER }
 
     #hierarchy des roles: ici ROLE_ADMIN a aussi les droits de ROLE_USER
-    role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
+    #role_hierarchy:
+        #ROLE_ADMIN: ROLE_USER
 
     #Encodage pour le mot de passe
     encoders:
