--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,11 +48,11 @@ security:
     access_control:
         #- { path: ^/category, roles: ROLE_ADMIN }
         #- { path: ^/ideas/add, roles: ROLE_USER }
-        #- { path: ^/ideas/del, roles: ROLE_USER }
+        - { path: ^/sortie/creer, roles: ROLE_USER}
 
     #hierarchy des roles: ici ROLE_ADMIN a aussi les droits de ROLE_USER
-    #role_hierarchy:
-        #ROLE_ADMIN: ROLE_USER
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
 
     #Encodage pour le mot de passe
     encoders:
