--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/validator": "3.4.*",
         "symfony/web-link": "3.4.*",
         "symfony/yaml": "3.4.*",
-      "ext-json": "*"
+      "ext-json": "*",
+      "ext-intl": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
